--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/index.css">
 
   <!-- Document Title -->
-  <title>I Have Something</title>
+  <title>For the sweetest person in the world</title>
 </head>
 
 <body>
